src/objects/ResidualsSalesRep__c.object
<CustomObject>
    <fields>
        <fullName>PayeeID__c</fullName>
        <formula>PayeeName__r.SalesRepID__c</formula>
        <label>Payee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayeeName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Originating_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayeeStartDate__c</fullName>
        <label>Payee Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PayeeType__c</fullName>
        <label>Payee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipName>Originating_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Residuals Sales Rep</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Payee-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Payee Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Residuals Sales Reps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>